--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2>Hi, I'm Ranis Syifaatul Fuadhah</h2>
             <p>I'm a <span class="typed" data-typed-items="Customer Experience Specialist, Customer Service Specialist, KOL Specialist, Digital Stylist"></span><span class="typed-cursor" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://twitter.com/justinbieber" target="_blank"><i class="bi bi-twitter-x"></i></a>
               <a href="#"><i class="bi bi-facebook"></i></a>
               <a href="#"><i class="bi bi-instagram"></i></a>
               <a href="#"><i class="bi bi-linkedin"></i></a>
