--- a/index.html
+++ b/index.html
@@ -105,46 +105,37 @@
 
     </section><!-- /Hero Section -->
 
-    <!-- About Section -->
+    <!-- About Section (Single Layout) -->
 <section id="about" class="about section">
 
-  <div class="container section-title" data-aos="fade-up">
-    <span class="subtitle">About Me</span>
-    <h2>About Me</h2>
-    <p>Hi, I’m <strong>Ranis Syifaatul Fuadhah</strong> — a customer experience professional with over <strong>7 years of experience</strong> across <strong>e-commerce operations, influencer relations, and customer service</strong>. I specialize in creating seamless customer journeys, optimizing marketplace performance, and driving impactful brand experiences.</p>
-  </div>
+  <div class="container" data-aos="fade-up">
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <div class="row gy-5">
+    <div class="text-center mb-4">
+      <span class="subtitle">About Me</span>
+      <h2>Ranis Syifaatul Fuadhah</h2>
+      <p class="text-muted">Customer Experience & E-Commerce Specialist</p>
+    </div>
 
-      <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="150">
-        <div class="profile-card text-center">
-          <div class="profile-avatar mb-3">
-            <img src="assets/img/profile/profile-square-3.webp" class="img-fluid rounded-circle" alt="Ranis Syifaatul Fuadhah">
-          </div>
-          <h3>Ranis Syifaatul Fuadhah</h3>
-          <span class="role">Customer Experience & E-Commerce Specialist</span>
-          <div class="social-links mt-3">
-            <a href="https://www.linkedin.com/in/ranissyifaatul" target="_blank"><i class="bi bi-linkedin"></i></a>
-            <a href="mailto:ranissyifaatul@gmail.com"><i class="bi bi-envelope"></i></a>
-            <a href="https://ranissyifaaf.carrd.co/" target="_blank"><i class="bi bi-globe"></i></a>
-          </div>
-        </div>
-      </div>
+    <div class="text-center">
+      <img src="assets/img/profile/ranis.jpg" alt="Ranis Syifaatul Fuadhah" 
+           class="img-fluid rounded-circle mb-4" style="width:160px; height:160px; object-fit:cover;">
 
-      <div class="col-lg-8 content">
-        <div class="bio-section">
-          <h3>Turning Insights into Impactful Customer Experiences</h3>
-          <p>
-            Throughout my career, I’ve collaborated with regional teams in Singapore and Indonesia, handling high-volume communications while maintaining <strong>95%+ customer satisfaction</strong>. My expertise lies in <strong>problem-solving, cross-functional collaboration,</strong> and <strong>data-driven insights</strong> that improve workflows and enhance customer engagement.
-          </p>
-          <p>
-            I’m passionate about <strong>digital innovation and efficient communication systems</strong> — combining analytical thinking with empathy to build experiences that connect people and brands in meaningful ways.
-          </p>
-          <ul class="list-unstyled mt-4">
-            <li><i class="bi bi-geo-alt"></i> Parung Panjang, West Java, Indonesia</li>
-            <li><i class="bi bi-envelope"></i> ranissyifaatul@gmail.com</li>
-            <li><i class="bi bi-phone"></i> +62 822 9802 0091</li>
+      <p style="max-width:800px; margin:0 auto;">
+        Hi, I’m <strong>Ranis Syifaatul Fuadhah</strong> — a customer experience professional with over 
+        <strong>7 years of experience</strong> across <strong>e-commerce operations, influencer relations, and customer service</strong>. 
+        I specialize in creating seamless customer journeys, optimizing marketplace performance, and driving impactful brand experiences.
+      </p>
+
+      <p style="max-width:800px; margin:20px auto 0;">
+        Throughout my career, I’ve collaborated with regional teams in Singapore and Indonesia, handling high-volume communications 
+        while maintaining <strong>95%+ customer satisfaction</strong>. My expertise lies in <strong>problem-solving, cross-functional collaboration,</strong> 
+        and <strong>data-driven insights</strong> that improve workflows and enhance customer engagement.
+      </p>
+
+      <p style="max-width:800px; margin:20px auto 0;">
+        I’m passionate about <strong>digital innovation and efficient communication systems</strong> — combining analytical thinking 
+        with empathy to build experiences that connect people and brands in meaningful ways.
+      </p>
           </ul>
         </div>
       </div>
